--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,5 +10,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/cargo@v1
-        with:
-          command: build
+      - run: cargo build
