Try specifying target

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,4 +10,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/cargo@v1
-      - run: cargo build
+        with:
+          command: build
+          args: --target armv7-unknown-linux-gnueabihf
