--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,4 @@ jobs:
       image: ghcr.io/toltec-dev/rust
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --target armv7-unknown-linux-gnueabihf
+      - run: cat /root/.cargo/config
