--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,4 +9,4 @@ jobs:
       image: ghcr.io/toltec-dev/rust
     steps:
       - uses: actions/checkout@v2
-      - run: cat /root/.cargo/config
+      - run: ls
