--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,10 +5,12 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: ghcr.io/toltec-dev/toolchain
     steps:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+      - run: ls
       - uses: actions-rs/cargo@v1
         with:
           command: build
