--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,3 +16,6 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: build
+      - uses: actions/upload-artifact@v2
+        with:
+          path: target/
